--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@mui/x-data-grid": "^5.17.14",
     "@paypal/react-paypal-js": "^7.6.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/formidable": "^2.0.5",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "axios": "^0.26.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
+    "cloudinary": "^1.32.0",
+    "formidable": "^2.1.1",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.1",
